working from file