@@ -27,6 +27,13 @@ subprojects {
         compile group: 'junit', name: 'junit', version: '4.13'
 
     }
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += '--enable-preview'
+    }
+    tasks.withType(Test) {
+        jvmArgs += "--enable-preview"
+    }
+
 }
 
 project(':token') {
@@ -43,12 +50,15 @@ project(':interpreter') {
         testCompile project(':parser')
         testCompile project(':lexer')
     }
+
 }
 
 project(':lexer') {
     dependencies {
         compile project(':token')
     }
+
+
 }
 
 project(':parser') {
@@ -57,9 +67,14 @@ project(':parser') {
         compile project(':statement')
         testCompile project(':lexer')
     }
+
 }
 
 project(':cli') {
+    compileJava {
+        options.compilerArgs += ['--enable-preview']
+    }
+
     dependencies {
         compile project(':lexer')
         compile project(':parser')
@@ -67,9 +82,7 @@ project(':cli') {
         compile 'info.picocli:picocli:4.3.2'
         annotationProcessor 'info.picocli:picocli-codegen:4.3.2'
     }
-    compileJava {
-        options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
-    }
+
     jar {
         manifest {
             attributes(
@@ -77,6 +90,10 @@ project(':cli') {
                     'Main-Class': 'com.austral.ingsis.Main'
             )
         }
+        from {
+            configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        }
+
     }
 }
 
